precision and recall in the table big raw results table

--- a/table-templates/results_template.tex
+++ b/table-templates/results_template.tex
@@ -1,4 +1,4 @@
-\begin{tabular}{|l| |r|r|r|r| r|}
+\begin{tabular}{|l| |r|r|r|r| |r|}
 \hline
 Approach & Proof & Counter-Ex. & NoR & Cr. & TOut. \\
 \hline
