--- a/table-templates/classification_template.tex
+++ b/table-templates/classification_template.tex
@@ -1,10 +1,10 @@
-\begin{tabular}{|l| |r|r|r|r| |r|r|r|r| |r|r|r|}
+\begin{tabular}{|l| |r|r|r|r|r|r|r| |r|r|r|r|r|r|r| |r|}
 \hline
-Approach & \multicolumn{4}{c}{Safe} & \multicolumn{4}{c}{Unsafe} & & & \\
-         & TP & TN & FP & FN        & TP & TN & FP & FN          & Rec. & Prec. & F1 \\
+Approach & \multicolumn{7}{c||}{Safe} & \multicolumn{7}{c||}{Unsafe} & Avg \\
+         & TP & TN & FP & FN & Pr. & Re. & f1 & TP & TN & FP & FN & Pr. & Re. & f1 & f1\\
 \hline
-{% for approach, tps, tns, fps, fns, tpu, tnu, fpu, fnu, recall, precision, f1 in rows %}
-{{ approach }} & {{ tps }} & {{ tns }} & {{ fps }} & {{ fns }} & {{ tpu }} & {{ tnu }} & {{ fpu }} & {{ fnu }} & {{ recall }} & {{ precision }} & {{ f1 }} \\
+{% for approach, tps, tns, fps, fns, precs, recs, f1s, tpu, tnu, fpu, fnu, precun, recun, f1un, avgf1 in rows %}
+{{ approach }} & {{ tps }} & {{ tns }} & {{ fps }} & {{ fns }} & {{ precs }} & {{ recs }} & {{ f1s }} & {{ tpu }} & {{ tnu }} & {{ fpu }} & {{ fnu }} & {{ precun }} & {{ recun }} & {{ f1un }} & {{ avgf1 }}\\
 {% endfor %}
 \hline
 \end{tabular}
