safely over approximated results for replacing the detailed results table.

--- a/table-templates/results_template.tex
+++ b/table-templates/results_template.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{|l| |r|r|r|r| |r|r|}
 \hline
-Approach & Proof & Counter-Ex. & NoR & Cr. & TOut. & OOM.\\
+\textbf{Approach} & \textbf{Proof} & \textbf{Counter-Ex.} & \textbf{No Res.} & \textbf{Crash} & \textbf{T.-Out} & \textbf{OOM.}\\
 \hline
 {% for approach, proof, counterex, no_result, crash, timeout, oom in rows %}
 {{ approach }} & {{ proof }} & {{ counterex }} & {{ no_result }} & {{ crash }} & {{ timeout }} & {{ oom }} \\
