--- a/table-templates/soap_results_template.tex
+++ b/table-templates/soap_results_template.tex
@@ -1,7 +1,7 @@
 \begin{tabular}{|l| |r|r r|r|r r| |r|r|r|}
 \hline
-\textbf{Approach} & \textbf{T. Sec.} & \multicolumn{2}{c|}{\textbf{T. Insec.}} & \textbf{F. Sec.} & \multicolumn{2}{c||}{\textbf{F. Insec.}} & \textbf{Precision} & \textbf{Recall} & \textbf{f1} \\
-         & \multicolumn{1}{c|}{[TP]} & \multicolumn{2}{c|}{[TN]} & \multicolumn{1}{c|}{[FP]} & \multicolumn{2}{c||}{[FN]} & & & \\
+\textbf{Approach} & \textbf{T. Sec.} & \multicolumn{2}{c|}{\textbf{T. Insec.}} & \textbf{F. Sec.} & \multicolumn{2}{c||}{\textbf{F. Insec.}} & \textbf{Preci-} & \textbf{Recall} & \textbf{f1} \\
+         & \multicolumn{1}{c|}{[TP]} & \multicolumn{2}{c|}{[TN]} & \multicolumn{1}{c|}{[FP]} & \multicolumn{2}{c||}{[FN]} & \textbf{sion} & & \\
 \hline
 {% for approach, tp, tn, tns, fp, fn, fns, prec, rec, f1 in rows %}
 {{ approach }} & {{ tp }} & {{ tn }} & {{ tns }} & {{ fp }} & {{ fn }} &  {{ fns }} & {{ prec }} & {{ rec }} & {{ f1 }}\\
