--- a/table-templates/results_template.tex
+++ b/table-templates/results_template.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{|l| |r|r|r|r| |r|r|}
 \hline
-\textbf{Approach} & \textbf{Proof} & \textbf{Counter-Ex.} & \textbf{No Res.} & \textbf{Crash} & \textbf{T.-Out} & \textbf{OOM.}\\
+\textbf{Approach} & \textbf{Proof} & \textbf{Counter-Ex.} & \textbf{NoRes.} & \textbf{Crash} & \textbf{T-OUT.} & \textbf{OOM.}\\
 \hline
 {% for approach, proof, counterex, no_result, crash, timeout, oom in rows %}
 {{ approach }} & {{ proof }} & {{ counterex }} & {{ no_result }} & {{ crash }} & {{ timeout }} & {{ oom }} \\
